--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,9 @@ exclude:
   - CONTRIBUTING.md
 highlighter: pygments
 permalink: none
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+    values:
+      layout: "default"
